Crash after loading big image file in compositor #38040

Closed
opened 2014-01-03 00:41:03 +01:00 by Robert M · 21 comments

System Information
Debian AMD64, 2 GiB RAM, without OpenCL

Blender Version
Broken: current from buildbot, I noticed this bug in first half of December
Worked: 2.69 Release

Short description of error
Loading an big image file (like 4000x4000) in the Image-Node in the compositor causes a segfault.

Exact steps for others to reproduce the error

hmm.. drag and drop don't seem to work, so I can't upload the blend file and backtrace.
Just find a huge image and open it in the compositor Image, and expect a crash.

**System Information** Debian AMD64, 2 GiB RAM, without OpenCL **Blender Version** Broken: current from buildbot, I noticed this bug in first half of December Worked: 2.69 Release **Short description of error** Loading an big image file (like 4000x4000) in the Image-Node in the compositor causes a segfault. **Exact steps for others to reproduce the error** hmm.. drag and drop don't seem to work, so I can't upload the blend file and backtrace. Just find a huge image and open it in the compositor Image, and expect a crash.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @robertm

Added subscriber: @robertm

Added subscriber: @Sergey

Added subscriber: @Sergey

Don't see the crash here on debian wheezy.

You can upload files without drag-n-drop by changing Action from Comment to Upload File. Having files which crashes for you will help a lot.

Don't see the crash here on debian wheezy. You can upload files without drag-n-drop by changing `Action` from Comment to `Upload File`. Having files which crashes for you will help a lot.

Couldn't reproduce the issue here still. Maybe others will be more lucky.

Also, are you sure you're not running out of memory? Are there any error messages printed in the console before blender crashes?

Couldn't reproduce the issue here still. Maybe others will be more lucky. Also, are you sure you're not running out of memory? Are there any error messages printed in the console before blender crashes?
Author

I'm pretty sure I'm not running out of memory. (My swap partition would cause a significant slow down otherwise)
Instead, Blender crashes immediately, without touching the hard disc.
And 2.69 doesn't have any problems opening the test image.

Output from the console:
read blend: /home/amd5200/BUG/open_big_image/open_big_image.blend
Writing: /tmp/open_big_image.crash.txt
Writing: /tmp/open_big_image.crash.txt
Speicherzugriffsfehler (Segfault)

I'm pretty sure I'm not running out of memory. (My swap partition would cause a significant slow down otherwise) Instead, Blender crashes immediately, without touching the hard disc. And 2.69 doesn't have any problems opening the test image. Output from the console: read blend: /home/amd5200/BUG/open_big_image/open_big_image.blend Writing: /tmp/open_big_image.crash.txt Writing: /tmp/open_big_image.crash.txt Speicherzugriffsfehler (Segfault)

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

No crash on Windows 7 x64, nor Mac OS X 10.9, both with 8GB Ram and latest master.

No crash on Windows 7 x64, nor Mac OS X 10.9, both with 8GB Ram and latest master.
Author

I tested it again on another Linux computer with 8 GB RAM.
To achieve the same crash I needed to resize the image to 8000x8000.
Thomas could you please test it again with test_image8000.png?

I tested it again on another Linux computer with 8 GB RAM. To achieve the same crash I needed to resize the image to 8000x8000. Thomas could you please test it again with test_image8000.png?
Author

Tested again, It's not a problem with the image loading, but with image viewing!
When I enable Backdrop or Show Viewer-Node in UV-Editor then Blender consumes very large amount of RAM.
Another thing I found out is, when I change the "Image Draw Method" to GLSL, RAM consumpion improves dramatically, and I can handle 8K Images on my 2 GB RAM system.
(though Draw Method: "2D Texture" seems to be a bit faster on my system)
But still the current version seems to consume more RAM than 2.69.
So it's not a real bug, but maybe improvements to RAM usage can be done some time in the future.

Tested again, It's not a problem with the image loading, but with image viewing! When I enable Backdrop or Show Viewer-Node in UV-Editor then Blender consumes very large amount of RAM. Another thing I found out is, when I change the "Image Draw Method" to GLSL, RAM consumpion improves dramatically, and I can handle 8K Images on my 2 GB RAM system. (though Draw Method: "2D Texture" seems to be a bit faster on my system) But still the current version seems to consume more RAM than 2.69. So it's not a real bug, but maybe improvements to RAM usage can be done some time in the future.
Author

After a second thought it might be a bug.
Blender 2.69 consumes 26 percent of my 2GB with a 4000x4000 image.
So why should the current development version crash?

After a second thought it might be a bug. Blender 2.69 consumes 26 percent of my 2GB with a 4000x4000 image. So why should the current development version crash?
Author

It seems that the "Image Drawing Method" in File/User Preferencies/System plays a significant role here.
GLSL is probably the most stable method (no crash so far), but it's slower than the other methods.
"DrawPixels" and "2D Texture" both cause this segfault.

It seems that the "Image Drawing Method" in File/User Preferencies/System plays a significant role here. GLSL is probably the most stable method (no crash so far), but it's slower than the other methods. "DrawPixels" and "2D Texture" both cause this segfault.
Sergey Sharybin self-assigned this 2014-01-05 12:30:05 +01:00

I would actually expect it to use less memory than 2.69. Might have done a mistake somewhere, will doublecheck the memory usage.

I would actually expect it to use less memory than 2.69. Might have done a mistake somewhere, will doublecheck the memory usage.

Run some tests and don't see any unexpected behavior with latest builds. Was using test_image8000.png and compared 2.69 release with current git version.

Blender 2.69 release:

  • total memory len: 1475.159 MB
  • peak memory len: 2695.881 MB
  • slop memory len: 11.307 MB

Blender GIT version:

  • total memory len: 1475.800 MB
  • peak memory len: 1751.225 MB
  • slop memory len: 6.483 MB

As you could see memory consumption actually have been reduced dramatically. So please download the very fresh build from http://builder.blender.org/download/ and see whether you still do have the issue.

You can type "Memory Statistics" in the space-menu to get memory statistics printed to the terminal.

Run some tests and don't see any unexpected behavior with latest builds. Was using test_image8000.png and compared 2.69 release with current git version. Blender 2.69 release: * total memory len: 1475.159 MB * peak memory len: 2695.881 MB * slop memory len: 11.307 MB Blender GIT version: * total memory len: 1475.800 MB * peak memory len: 1751.225 MB * slop memory len: 6.483 MB As you could see memory consumption actually have been reduced dramatically. So please download the very fresh build from http://builder.blender.org/download/ and see whether you still do have the issue. You can type "Memory Statistics" in the space-menu to get memory statistics printed to the terminal.

Ah hold on, could reproduce crash when starting blender --factory-startup. Something weird is going on here, looking into it..

Ah hold on, could reproduce crash when starting `blender --factory-startup`. Something weird is going on here, looking into it..

This issue was referenced by blender/blender-addons-contrib@b1bb7d2ee0

This issue was referenced by blender/blender-addons-contrib@b1bb7d2ee06d13e95154d13a6e830b8b0f845cde

This issue was referenced by b1bb7d2ee0

This issue was referenced by b1bb7d2ee06d13e95154d13a6e830b8b0f845cde

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b1bb7d2ee0.

Closed by commit b1bb7d2ee0.

Fixed the issue now. Please note that you might want to increase cache limit for the images to make more images fit into the memory. Without this performance night not be so much good.

P.S. We indeed implemented cache size limit for loaded images, so now it'll contain as much images as it's possible with cache limit in the user preferences.

Fixed the issue now. Please note that you might want to increase cache limit for the images to make more images fit into the memory. Without this performance night not be so much good. P.S. We indeed implemented cache size limit for loaded images, so now it'll contain as much images as it's possible with cache limit in the user preferences.
Author

Thank you for the fix, Sergey!

Thank you for the fix, Sergey!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38040
No description provided.